sort.pancake.BasicPancake.scala.code
def solve() {
  var taille = getTaillePile()
  for(i<- 0 to taille){
    if(getRayonCrep(i+1)<getRayonCrepe(i)){
      retourne(i)
    }
  }
  
}